--- a/Proyecto/Login.html
+++ b/Proyecto/Login.html
@@ -35,7 +35,7 @@
                 <div class="login__tools--RS"><img src="Recursos/Imagenes/icon-google.png" alt="Google"><a
                         href="/">Inicia sesión con Google</a></div>
                 <div class="login__tools--RS"><img src="Recursos/Imagenes/icon-twitter.png" alt="Twitter"><a
-                        href="/"></a>Inicia sesión con Twitter</a></div>
+                        href="/">Inicia sesión con Twitter</a></div>
             </div>
             <div class="login__tools">
                 <a href="Registrate.html" class="login__tools--register">¿No tienes una cuenta?
